stylesheet.less
/* ... */
.blog-post-list .blog-post-feature-image-wrap {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	height: 100%;
	width: 65%;
	margin-left: -5%;
	margin-right: -40px;
	float: right;
	z-index: 0;
	&:after {
		display: block;
		content: "";
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		background: -moz-linear-gradient(left, fadeout(@color-swatch1, 0%) 0%, fadeout(@color-swatch1, 100%) 65%, fadeout(@color-swatch1, 100%) 100%); /* FF3.6+ */
		background: -webkit-gradient(linear, left top, right top, color-stop(0%,fadeout(@color-swatch1, 0%)), color-stop(65%,fadeout(@color-swatch1, 100%)), color-stop(100%,fadeout(@color-swatch1, 100%))); /* Chrome,Safari4+ */
		background: -webkit-linear-gradient(left, fadeout(@color-swatch1, 0%) 0%,fadeout(@color-swatch1, 100%) 65%,fadeout(@color-swatch1, 100%) 100%); /* Chrome10+,Safari5.1+ */
		background: -o-linear-gradient(left, fadeout(@color-swatch1, 0%) 0%,fadeout(@color-swatch1, 100%) 65%,fadeout(@color-swatch1, 100%) 100%); /* Opera 11.10+ */
		background: -ms-linear-gradient(left, fadeout(@color-swatch1, 0%) 0%,fadeout(@color-swatch1, 100%) 65%,fadeout(@color-swatch1, 100%) 100%); /* IE10+ */
		background: linear-gradient(to right, fadeout(@color-swatch1, 0%) 0%,fadeout(@color-swatch1, 100%) 65%,fadeout(@color-swatch1, 100%) 100%); /* W3C */
	}
}

.widget.blogsearch {
	width: 100%;
	float: left;
	padding-right: 40px;
	text-align: left;
	margin-bottom: 20px;
	label {
		height: 0;
		text-indent: -200px;
		overflow: hidden;
		padding-top: 0;
	}
	input[type=search], input[type=search]:focus {
		width: 30%;
		border-radius: 0;
		border: none;
		border-bottom: 1px solid darken(@color-swatch1, 10%);
		padding: 0;
		padding-top: 8px;
		margin-right: 0;
		vertical-align: bottom;
		display: inline-block;
		-webkit-appearance: none;
		@media @tablet {
			width: 70%;
			margin: 0;
		}
	}
	button, button:hover {
		border-radius: 0;
		text-indent: -200px;
		border: none;
		background-image: image('/images/icon-search.png');
		background-size: 18px 18px;
		background-position: right center;
		background-repeat: no-repeat;
		padding: 6px 12px;
		border-bottom: 1px solid darken(@color-swatch1, 10%);
		vertical-align: bottom;
		display: inline-block;
		overflow: hidden;
	}
}
.svg .widget.blogsearch button {
	background-image: image('/images/icon-search.svg');
}

// 7. Blog Post
.main .blog-post-metadata {
	border-top: 1px solid darken(@color-swatch1, 10%);
}
.main .blog-post-metadata, .main .blog-post-date {
	margin-top: 10px;
	padding-top: 10px;
	text-decoration: none;
	color: lighten(@font-swatch5-color, 20%);
	time, p {
		color: lighten(@font-swatch5-color, 20%);
	}
}

.main .blog-post-date {
	&:hover {
		text-decoration: underline;
	}
}

.blogpost-page .blog-post-feature-image-wrap {
	height: 350px;
	margin-bottom: 18px;
}

.blog-post-sharing {
	margin-top: 10px;
}

// 8. Forms
label,
.signupform fieldset label {
	display: block;
	padding-top: 10px;
	margin-bottom: 0;
}

input[type=text],
input[type=email],
input[type=search],
.signupform fieldset input[type=email],
.widget.profile form fieldset input[type=email],
textarea {
	text-indent: 0;
	height: auto;
	background: @color-swatch1;
	border: 1px solid darken(@color-swatch1, 10%);
	line-height:@font-swatch5-line-height;
	font-size:@font-swatch5-font-size;
	padding: 6px 10px;
	border-radius: 2px;
	-webkit-appearance: none;
	&:focus {
		border-color: darken(@color-swatch1, 15%);
	}
}

.form-group:nth-child(2n) {
    margin-bottom: 10px;
}

input[type=email], .signupform fieldset input[type=email],
.widget.profile form fieldset input[type=email] {
	height: 42px;
}

textarea {
	resize: vertical;
}

.widget.profile form fieldset input,
.signupform fieldset input,
input[type=search] {
	width: 60%;
}

input:focus::-webkit-input-placeholder {
	color: darken(@color-swatch1, 10%);
}
input:focus:-moz-placeholder {
	color: darken(@color-swatch1, 10%);
}
input:focus::-moz-placeholder {
	color: darken(@color-swatch1, 10%);
}
input:focus:-ms-input-placeholder {
	color: darken(@color-swatch1, 10%);
}

.contactform button.btn,
button.btn,
.widget.profile form button,
.widget.paypalbuynow .widget.button.paypal,
.widget.tweet a,
.widget.dropbox button,
.clicktocall a,
.signupform fieldset button,
.blog-search-form button,
.widget.socialicons span a,
.widget.profile .bk-profile-socialicons span a,
.template-footer .widget.profile .bk-profile-socialicons span a,
.widget .extendednavigation ul li:hover ul,
.basket-summary-empty-cta,
.widget.ecomproduct .ecom-product .btn,
.widget.ecombasket .ecombasket-pull,
.btn.ecombasket-summary-link {
	-webkit-font-smoothing: inherit;
	border: 1px solid @font-swatch7-color;
	color: @font-swatch7-color;
	background-color: @font-swatch7-background-color;
	line-height: @font-swatch7-line-height;
	font-size: @font-swatch7-font-size;
	font-family: @font-swatch7-font-family;
	cursor: pointer;
	border-radius: 2px;
	-webkit-appearance: none;
	&:hover {
		border-color: darken(@color-swatch2, 20%);
		color: darken(@font-swatch7-color, 20%);
		background-color: @font-swatch7-background-color-hover;
	}
}

.widget.socialicons span a,
.widget.profile .bk-profile-socialicons span a,
.template-footer .widget.profile .bk-profile-socialicons span a	{
	border-radius: 100%;
}

.clicktocall a,
.blog-search-form button,
.widget.profile form button,
.signupform fieldset button {
	padding: 8px 14px;
	margin: 0;
}

input[type="search"]::-webkit-search-decoration {
	display: none;
}

.widget.clicktocall a {
	display: inline-block;
	@media @mobile, only screen and (max-width:700px) and (orientation:landscape) {
		background-color: @color-swatch3;
		color: @font-swatch10-color;
		&:hover {
			background-color: @color-swatch4;
		}
	}
}

// 9. Gallery / Images / Slideshow / Map

.widget.gallery ul li .inner {
	&:hover {
		.transition( opacity, 0.5s, ease );
    	opacity: 1;
	}
}

.widget.gallery {
	margin: 0;
}
/* ... */

